--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<h1>Hello World</h1>
+<html>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<style> circle {fill: lightblue; stroke: black;} </style>
+<h1>Narrative Visualization Dashboard</h1>
+<body onload='init()'>
+<svg width=300 height=300>
+</svg>
+<script>
+async function init() {
+    const data = await d3.csv('https://flunky.github.io/cars2017.csv');
+
+    var svg = d3.select("svg"),
+        width = 200,
+        height = 200
+    
+    var xs = d3.scaleLog().base(10).domain([10,150]).range([0, width]),
+        ys = d3.scaleLog().base(10).domain([10,150]).range([height, 0])
+
+    svg
+       .append("g")
+       .attr("transform", "translate(50,50)")
+       .call(d3.axisLeft(ys)
+               .tickValues([10,20,50,100])
+               .tickFormat(d3.format("~s")));
+    svg
+       .append("g")
+       .attr("transform", "translate(50,250)")
+       .call(d3.axisBottom(xs)
+               .tickValues([10,20,50,100])
+               .tickFormat(d3.format("~s")));
+
+   svg
+      .append("g")
+      .attr("transform", "translate(50,50)")
+      .selectAll("dots")
+      .data(data)
+      .enter()
+      .append("circle")
+      .attr("cx", function(d) {return xs(d.AverageCityMPG);})
+      .attr("cy", function(d) {return ys(d.AverageHighwayMPG);})
+      .attr("r", function(d) {return 2+parseInt(d.EngineCylinders);});
+}
+</script>
+</body>
+</html>
