--- a/index.html
+++ b/index.html
@@ -1,45 +1,83 @@
 <html>
-<script src='https://d3js.org/d3.v5.min.js'></script>
-<style> circle {fill: lightblue; stroke: black;} </style>
+<input type="number" id="buttonXlim" value=9>
+
+<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v4.js"></script>
+
+<!-- Create a div where the graph will take place -->
+<div id="my_dataviz"></div>
+
 <h1>Narrative Visualization Dashboard</h1>
 <body onload='init()'>
-<svg width=300 height=300>
-</svg>
 <script>
-async function init() {
-    const data = await d3.csv('https://flunky.github.io/cars2017.csv');
+// set the dimensions and margins of the graph
+var margin = {top: 10, right: 30, bottom: 30, left: 60},
+    width = 460 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
 
-    var svg = d3.select("svg"),
-        width = 200,
-        height = 200
-    
-    var xs = d3.scaleLog().base(10).domain([10,150]).range([0, width]),
-        ys = d3.scaleLog().base(10).domain([10,150]).range([height, 0])
+// append the svg object to the body of the page
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
 
-    svg
-       .append("g")
-       .attr("transform", "translate(50,50)")
-       .call(d3.axisLeft(ys)
-               .tickValues([10,20,50,100])
-               .tickFormat(d3.format("~s")));
-    svg
-       .append("g")
-       .attr("transform", "translate(50,250)")
-       .call(d3.axisBottom(xs)
-               .tickValues([10,20,50,100])
-               .tickFormat(d3.format("~s")));
+//Read the data
+d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/iris.csv", function(data) {
 
-   svg
-      .append("g")
-      .attr("transform", "translate(50,50)")
-      .selectAll("dots")
-      .data(data)
-      .enter()
-      .append("circle")
-      .attr("cx", function(d) {return xs(d.AverageCityMPG);})
-      .attr("cy", function(d) {return ys(d.AverageHighwayMPG);})
-      .attr("r", function(d) {return 2+parseInt(d.EngineCylinders);});
-}
+  // Add X axis
+  var x = d3.scaleLinear()
+    .domain([0, 9])
+    .range([ 0, width ]);
+  var xAxis = svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
+
+  // Add Y axis
+  var y = d3.scaleLinear()
+    .domain([0, 9])
+    .range([ height, 0]);
+  svg.append("g")
+    .call(d3.axisLeft(y));
+
+  // Add dots
+  svg.append('g')
+    .selectAll("dot")
+    .data(data)
+    .enter()
+    .append("circle")
+      .attr("cx", function (d) { return x(d.Sepal_Length); } )
+      .attr("cy", function (d) { return y(d.Petal_Length); } )
+      .attr("r", 5)
+      .style("fill", "#69b3a2" )
+
+
+  // A function that update the plot for a given xlim value
+  function updatePlot() {
+
+    // Get the value of the button
+    xlim = this.value
+
+    // Update X axis
+    x.domain([3,xlim])
+    xAxis.transition().duration(1000).call(d3.axisBottom(x))
+
+    // Update chart
+    svg.selectAll("circle")
+       .data(data)
+       .transition()
+       .duration(1000)
+       .attr("cx", function (d) { return x(d.Sepal_Length); } )
+       .attr("cy", function (d) { return y(d.Petal_Length); } )
+  }
+
+  // Add an event listener to the button created in the html part
+  d3.select("#buttonXlim").on("input", updatePlot )
+
+})
+
 </script>
 </body>
 </html>
