--- a/index.html
+++ b/index.html
@@ -25,58 +25,9 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 //Read the data
-d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/iris.csv", function(data) {
-
-  // Add X axis
-  var x = d3.scaleLinear()
-    .domain([0, 9])
-    .range([ 0, width ]);
-  var xAxis = svg.append("g")
-    .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x));
-
-  // Add Y axis
-  var y = d3.scaleLinear()
-    .domain([0, 9])
-    .range([ height, 0]);
-  svg.append("g")
-    .call(d3.axisLeft(y));
-
-  // Add dots
-  svg.append('g')
-    .selectAll("dot")
-    .data(data)
-    .enter()
-    .append("circle")
-      .attr("cx", function (d) { return x(d.Sepal_Length); } )
-      .attr("cy", function (d) { return y(d.Petal_Length); } )
-      .attr("r", 5)
-      .style("fill", "#69b3a2" )
-
-
-  // A function that update the plot for a given xlim value
-  function updatePlot() {
-
-    // Get the value of the button
-    xlim = this.value
-
-    // Update X axis
-    x.domain([3,xlim])
-    xAxis.transition().duration(1000).call(d3.axisBottom(x))
-
-    // Update chart
-    svg.selectAll("circle")
-       .data(data)
-       .transition()
-       .duration(1000)
-       .attr("cx", function (d) { return x(d.Sepal_Length); } )
-       .attr("cy", function (d) { return y(d.Petal_Length); } )
-  }
-
-  // Add an event listener to the button created in the html part
-  d3.select("#buttonXlim").on("input", updatePlot )
-
-})
+  d3.csv("https://raw.githubusercontent.com/Lp18-illinois/Narrative-Viz-project/main/us-states.csv", function(data) {  
+      console.log(data);
+   })
 
 </script>
 </body>
