--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ var svg = d3.select("#my_dataviz")
 //Read the data
   d3.csv("https://raw.githubusercontent.com/Lp18-illinois/Narrative-Viz-project/main/us-states.csv", function(data) {  
       for (var i = 0; i < data.length; i++) {
-        console.log(data[i].date);
-        console.log(data[i].state);
+        console.log(data[i]);
     }
    })
 
