--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
-<html>
-<input type="number" id="buttonXlim" value=9>
+<html lang="en">
+<head>
+ <meta name="viewport" content="width=device-width", initial-scale=1", charset=UTF-8>
+ <title> Narrative Viz Project </title>
+ <link rel="stylesheet" type = "text/css" href="mystyle.css">
+</head>
+
+<h1>Cumulative Covid-19 Report in US from 2020 to 2023. </h1>
 
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
 
+<!-- Load d3-annotation -->
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+
+<p1>The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases.</p1>
+<br><br>
+<p1>This webpage shows 4 slides with respect to US nation level Covid-19 cases, deaths as well as State level cases and deaths as per the slides clickable below. Click to Visualize and apply filters to know more about the details.</p1>
+<br><br>
+<div class="btn-group">
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> US Cases</button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/US-Deaths-Report.html'"> US Deaths</button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/US-States-Cases-Report.html'"> US States Cases
+   </button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/US-States-Death-Report.html'"> US States Deaths</button>
+</div>
+<h2> US Cases</h2>
+<br><br>
+State : <button type="input" id="stateButton" name="selectState"></button>
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
-
-<h1>Narrative Visualization Dashboard</h1>
-<body onload='init()'>
-<script>
-// set the dimensions and margins of the graph
-var margin = {top: 10, right: 30, bottom: 30, left: 60},
-    width = 460 - margin.left - margin.right,
-    height = 400 - margin.top - margin.bottom;
-
-// append the svg object to the body of the page
-var svg = d3.select("#my_dataviz")
-  .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform",
-          "translate(" + margin.left + "," + margin.top + ")");
-
-//Read the data
-  d3.csv("https://raw.githubusercontent.com/Lp18-illinois/Narrative-Viz-project/main/us-states.csv", function(data) {  
-      for (var i = 0; i < data.length; i++) {
-        console.log(data[i]);
-    }
-   })
-
-</script>
+<body>
 </body>
 </html>
