--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <p1> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases. </p1>
 <p></p>
 <div class="btn-group">
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> US Cases</button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> US Deaths</button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/US-States-Cases-Report.html'"> US States Cases
-   </button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/US-States-Death-Report.html'"> US States Deaths</button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> US Cases </button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> US Deaths </button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesCasesReport.html'"> US States Cases </button>
+  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesDeathsReport.html'"> US States Deaths </button>
 </div>
 <br><br>
 <!-- Load d3.js -->
