--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 </div>
 
 <script>
-// Last Update - 07/25/23 - 4 PM
+// Last Update - 07/26/23 - 1 AM
 // set the dimensions and margins of the graph
-var margin = {top: 50, right: 50, bottom: 50, left: 100},
-    width = 800 - margin.left - margin.right,
+var margin = {top: 50, right: 150, bottom: 50, left: 100},
+    width = 900 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
