HTML Update Complete

--- a/USstatesDeathsReport.html
+++ b/USstatesDeathsReport.html
@@ -5,48 +5,44 @@
  <link rel="stylesheet" type = "text/css" href="mystyle.css">
 </head>
 
-<h1>Cumulative Covid-19 Report in US from 2020 to 2023.</h1>
-
-<p1> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases. </p1>
-<p></p>
-<div class="btn-group">
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> US Cases </button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> US Deaths </button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesCasesReport.html'"> US States Cases </button>
-  <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesDeathsReport.html'"> US States Deaths </button>
+<!-- Rectangular box positioned at top -->
+<div class="rectangle1">
+  <h1>&nbsp; Narrative Visualization of Cumulative Covid-19 Cases & Deaths in US from 2020 to 2023.</h1>
+  <p1> &nbsp;&nbsp;Believe it or not, Covid is still a thing in US, even today! This is an interactive visualization to show the historical <b>cumulative figures</b> of Covid-19 in United States from January 2020 to March 2023 and the steep rises happened around <b>holiday seasons.</b></p1> <br>
+  <br>
+  <p1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Select Buttons below to see resepctive scenes!</b></p1>
+  <div class="btn-group">
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> <b>US Cases</b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> <b>US Deaths</b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesCasesReport.html'"> <b>US States Cases</b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesDeathsReport.html'"> <b>US States Deaths</b> </button>
+  </div>
 </div>
-<br>
-State: <select name="stateSelect" id="stateButton"></select>
-
-<!-- Load d3.js -->
+<br><br><br><br><br><br><br><br><br><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>State : </b><select name="stateSelect" id="stateButton"></select>
+<!-- Load d3.js , d3-annotation, d3-scale-chromatic-->
 <script src="https://d3js.org/d3.v4.js"></script>
-
-<!-- Load d3-annotation -->
-
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
-
-<!-- Color Scale -->
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-<!-- Create a div where the graph will take place -->
+<!-- Create a div where the graph will display -->
 <div id="my_dataviz"></div>
 
-<body onload='init()'>
-
-<!-- Rectangular box positioned at (200px, 100px) on the page -->
-<div class="rectangle">
-    <h4> First Covid Case</h4>
-    <p> CDC reported the first laboratory-confirmed case of the 2019 Novel Coronavirus in the U.S. from samples taken on January 18, 2020 in Washington state and on the same day activates its Emergency Operations Center (EOC) to respond to the emerging outbreak.</p>
-    <h4>First Peak in Cases</h4>
-    <p> The largest peak in hospitalizations occurred in December 2020 and January 2021, aligning with the largest peak in reported case rates.</p>
-    <h4>Second Peak in Cases</h4>
-    <p> Cases rose again around holiday seasons in December 2021, even after the vaccinations are in progress, raises concerns on the vaccinations.</p>
-    <h4>Source of Data</h4>
-    <p> New York Times Report</p>
+<!-- Rectangular box positioned at right of graph -->
+<div class="rectangle2">
+  <h3> First Covid Case</h3>
+  <div class=p2> &nbsp;CDC reported the first laboratory-confirmed case of the 2019 Novel Coronavirus in the U.S. from samples taken on January 18, 2020 in Washington state and on the same day activates its Emergency Operations Center (EOC) to respond to the emerging outbreak.</p2>
+  <h3>First Steep Rise in Cases</h3>
+  <div class=p2> &nbsp;The largest peak in hospitalizations occurred in December 2020 and January 2021, aligning with the largest peak in reported case rates.</div>
+  <h3>Second Steep Rise in Cases</h3>
+    <div class=p2> &nbsp;Cases rose again signifcantly around in December 2021, again in holiday season, even when the vaccinations are in progress.</div>
+  <h3>Source of Data</h3>
+    <div class=p2> &nbsp;<a href="https://github.com/nytimes/covid-19-data">NewYork Times Covid-19-data.</a> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases.</div>
 </div>
 
+<body>
 <script>
-// Last Update - 07/26/23 - 6 PM - Tooltip Work Done
+// Last Update - 07/27/23 - 3 PM - NYTimes Link Added
 // set the dimensions and margins of the graph
 var margin = {top: 50, right: 150, bottom: 50, left: 100},
     width = 900 - margin.left - margin.right,
@@ -89,7 +85,7 @@ var svg = d3.select("#my_dataviz")
 // Features of the annotation
     const annotations1 = [
     { note: {
-      label: "Saw First Peak",
+      label: "First Steep Rise",
       title: "Holiday Season"
     },
     x: 190,
@@ -100,7 +96,7 @@ var svg = d3.select("#my_dataviz")
 
     const annotations2 = [
     { note: {
-      label: "Saw Second Peak",
+      label: "Second Steep Rise",
       title: "Holiday Season"
     },
     x: 405,
